--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico" autofocus="">
           </div>
           <div class="form-group input-box">
-            <label for="inputPassword" class="sr-only">
+            <label for="inputPassword" class="sr-only" class="password-container">
               Contraseña
             </label>
             <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña">
           </div>
           <div class="form-group input-box">
-            <select class="form-control">
+            <select class="form-control" >
               <option value="0">Selecciona tu tipo de bici</option>
               <option value="urbana">Urbana</option>
               <option value="treking">Treking</option>
@@ -66,7 +66,8 @@
       </div>  
     </section>
     <!-- /container -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
-    <script type='text/javascript' src='js/donottouchthisfile.js'></script>
+   <script type='text/javascript' src='js/donottouchthisfile.js'></script> 
   </body>
 </html>
